--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                         <option value="11 - Gur-Is 85 (Fecho Zip) - ( Joel Araújo )">11 - Gur-Is 85 (Fecho Zip) - ( Joel Araújo )</option>
                         <option value="12 - PAL 750 (Zip e Cursor) - ( Tiago Silva )">12 - PAL 750 (Zip e Cursor) - ( Tiago Silva )</option>
                         <option value="13 - Mamata Vega 750 Plus - ( Nélson Silva )">13 - Mamata Vega 750 Plus - ( Nélson Silva )</option>
-                        <option value="14 - Gur-Is 75 (Coex) - ( Tiago Ferreira )">14 - Gur-Is 75 (Coex) - ( Tiago Ferreira )</option>
+                        <option value="14 - Gur-Is TY-900 CR (Coex) - ( Tiago Ferreira )">14 - Gur-Is 75 (Coex) - ( Tiago Ferreira )</option>
                         <option value="15 - SCAE 100 Reforço - (Joel)">15 - SCAE 100 Reforço - (Joel)</option>
                     </select>
                 </div>
