--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                         <option value="02 - Bobinadora 100 cm Amarela">02 - Bobinadora 100 cm Amarela</option>
                         <option value="03 - Bobinadora 80 cm">03 - Bobinadora 80 cm</option>
                         <option value="04 - Bob./Triângulo 185 cm">04 - Bob./Triângulo 185 cm</option>
-                        <option value="05 - Bobinadora 160 cm Titan">05 - Bobinadora 160 cm Titan</option>
+                        <option value="05 - Bobinadora 160 cm Titan">05 - Bobinadora 160 cm Titan - ( Diogo Loureiro )</option>
                         <option value="07 - Bielloni Tea 120">07 - Bielloni Tea 120</option>
                         <option value="-- - Enfardadeira">-- - Enfardadeira</option>
                     </select>
