--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             <label for="acao">Ação Realizada:</label>
             <textarea id="acao" name="acao" required></textarea><br>
 
-            <button type="submit">Registrar Manutenção</button>
+            <button type="submit">Registar Manutenção</button>
         </form>
 
         <table id="tabela-registros">
@@ -267,7 +267,7 @@
             <tbody></tbody>
         </table>
         <form id="senhaForm" style="display: none;">
-            <label for="senha">Digite a senha para limpar os registros:</label>
+            <label for="senha">Digite a senha para limpar os registos:</label>
             <input type="password" id="senha" name="senha" required>
 
         </form>
@@ -328,7 +328,7 @@
                         dataInput.value = hoje; // Preencher data atual no campo de data após resetar o formulário
                     },
                     error: function() {
-                        alert('Ocorreu um erro ao registrar a manutenção.');
+                        alert('Ocorreu um erro ao registar a manutenção.');
                     }
                 });
             });
