2025 Fev index.html

--- a/index.html
+++ b/index.html
@@ -236,13 +236,13 @@
                     <label for="maquina_bobinagem">Bobinagem / Outros:</label>
                     <select id="maquina_bobinagem" name="maquina_bobinagem">
                         <option value="">Selecione a máquina...</option>
-                        <option value="Bob.01 - Bobinadora 100 cm Azul">01 - Bobinadora 100 cm Azul</option>
-                        <option value="Bob.02 - Bobinadora 100 cm Amarela">02 - Bobinadora 100 cm Amarela</option>
-                        <option value="Bob.03 - Bobinadora 80 cm">03 - Bobinadora 80 cm</option>
-                        <option value="Bob.04 - Bob./Triângulo 185 cm">04 - Bob./Triângulo 185 cm</option>
-                        <option value="Bob.05 - Bobinadora 160 cm Titan">05 - Bobinadora 160 cm Titan - ( Diogo Loureiro )</option>
+                        <option value="Bob.01 - Bobinadora 100 cm Azul">Bob.01 - Bobinadora 100 cm Azul</option>
+                        <option value="Bob.02 - Bobinadora 100 cm Amarela">Bob.02 - Bobinadora 100 cm Amarela</option>
+                        <option value="Bob.03 - Bobinadora 80 cm">Bob.03 - Bobinadora 80 cm</option>
+                        <option value="Bob.04 - Bob./Triângulo 185 cm">Bob.04 - Bob./Triângulo 185 cm</option>
+                        <option value="Bob.05 - Bobinadora 160 cm Titan">Bob.05 - Bobinadora 160 cm Titan - ( Diogo Loureiro )</option>
                         <option value="Bob.06 - Polimac 85 (BOBINES)">Bob.06 - Polimac 85 (BOBINES) - ( Ivan Lysyy )</option>
-                        <option value="Bob.07 - Bielloni Tea 120">07 - Bielloni Tea 120</option>
+                        <option value="Bob.07 - Bielloni Tea 120">Bob.07 - Bielloni Tea 120</option>
                         <option value="-- - Enfardadeira">-- - Enfardadeira</option>
                     </select>
                 </div>
